[package]
name = "my_roast"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.5" }
sqlx = { version = "0.8.0", features = [
  "postgres",
  "runtime-tokio",
  "macros",
  "runtime-tokio-rustls",
] }
config = "0.14"
serde = "1.0.206"
serde-aux = "4.5.0"
anyhow = "1.0.86"
